Implemented to do list soft delete.

--- a/src/WebUI/ClientApp/src/app/todo/todo.component.html
+++ b/src/WebUI/ClientApp/src/app/todo/todo.component.html
@@ -25,6 +25,10 @@
             <div class="float-end text-right">
               <span class="badge badge-light">{{ remainingItems(list) }}</span>
             </div>
+            <button *ngIf="list.id != 0" class="btn btn-default btn-xs" role="button"
+                    (click)="confirmDeleteListV2(deleteListModalTemplate)">
+              <i class="bi bi-three-dots-vertical"></i>
+            </button>
           </div>
         </li>
       </ul>
