--- a/src/WebUI/ClientApp/src/styles.scss
+++ b/src/WebUI/ClientApp/src/styles.scss
@@ -15,6 +15,7 @@ code {
   border-color: #1861ac;
 }
 
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 /* Importing Bootstrap SCSS file. */
 @import "~bootstrap/scss/bootstrap";
 
